Fixed slideshow for first project. Need to modularize for re-use

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="styles/css/grayscale.css" rel="stylesheet">
+    <link href="styles/css/slideshow.css" rel="stylesheet">
     
   </head>
 
